package org.example.model;

public enum TaskType {
    HOMEWORK,
    CONTROL_QUESTION;
}

