@startuml
class Student {
    - fullName: String
    - ulearnId: String
    - group: String
    - score : int
    - idCity : int
}

class Task {
    - score: int
    - type: String
}

class Course {
    - name: String
    - themes: List<Theme>
}

class Course {
    - name: String
    - students: List<Student>
    - themes: List<Theme>
}

class Theme {
    - name: String
    - tasks: List<Task>
}

enum TaskType {
    HOMEWORK,
    CONTROL_QUESTION;
}

class City {
    - idCity : int
    - name : String
}
Student --> City
Course --> Theme
Course --> Student
Theme --> Task
Task.TaskType
@enduml
